--- a/blog7/go-gin-example/conf/app.ini
+++ b/blog7/go-gin-example/conf/app.ini
@@ -12,8 +12,8 @@ WRITE_TIMEOUT = 60
 
 [database]
 TYPE = mysql
-USER = 数据库账号
-PASSWORD = 数据库密码
+USER = crazy
+PASSWORD = crazy
 #127.0.0.1:3306
 HOST = 127.0.0.1:3306
 NAME = blog
