feat: add parse extentions

--- a/c/prac_code_content/7788/go_kafka/demo/trigger_demo2.yaml
+++ b/c/prac_code_content/7788/go_kafka/demo/trigger_demo2.yaml
@@ -9,5 +9,5 @@ spec:
         type: greeting2
         source: send2
     subscriber:
-      uri: https://hello-event.newtest.k8s.guanmai.cn/
+      uri: https://hello-event.newtest.k8s.guanmai.cn/msg/receive
         
